# pico

./: .gitignore  CMakeLists.txt  README.md
coco4/: AVGA2_8x16.h  CMakeLists.txt  coco4.c  coco4_demo.c  sound.c  video.c
coco4/include/coco4/: coco4.h
cpu6502/: CMakeLists.txt  cpu_test.c  fake6502.c  fake6502.h  minimal_computer.c  minimal_computer.h  vrEmu6502.c  vrEmu6502.h
cpu6809/: CMakeLists.txt  cpu.c  cpu_test.c  main.c  main.h
ili9341/: CMakeLists.txt  ili9341.c  ili9341.h  main.c  mode0.c  mode0.h  mode0_demo.c  mode1.c  mode1_demo.c  mode2.c
ili9341/include/ili9341/: ili9341.h
kilo/: CMakeLists.txt  kilo.c  kilo.h  kilo_platform.h  kilo_platform_mode0.c  kilo_platform_ssd1306.c
memory/: CMakeLists.txt  allocate.c  allocate_demo.c
memory/include/allocate/: allocate.h
retro/: CMakeLists.txt  barebones.c  repl.c
ribbit/: CMakeLists.txt  ribbit.c
ssd1306/: CMakeLists.txt  font.c  ssd1306.c  ssd1306.h  ssd1306_demo.c
ssd1306/include/ssd1306/: ssd1306.h
textmode/: CMakeLists.txt  foo.c  textmode.c
textmode/include/: foo.h
vga/: CMakeLists.txt  fonts.c  mode0.c  mode1.c  mode2.c  modex.c  modez.c  vga.c  vga_demo.c  vga_inc.h  vga_sync.pio
vga-old/: vga_sync.pio
vga/include/vga/: vga.h
